fix: Price export error
--bug=1064223 --user=宋昌昌 【产品】价格表-导出价格表如果包含表单字段导出失败 https://www.tapd.cn/34675357/s/1807956